--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,26 @@
 .App {
   text-align: center;
 }
+#navbar{
+  justify-content: space-around;
+  padding: 5px;
+  display: flex;
+  height: 50px;
+  width: 100%;
+  color: white;
+  background-color: #282c34;
 
+}
+#name{
+  width: 30%;
+  justify-content: space-around;
+  display: flex;
+  color: white;
+}
+#button1{
+  background-color: aqua;
+  border-radius: 4px;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
